@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,7 +22,7 @@
  */
 
 import java.net.URI;
-import jdk.incubator.http.HttpClient;
+import java.net.http.HttpClient;
 import java.time.Duration;
 import java.util.Arrays;
 import java.util.function.BiFunction;
@@ -30,9 +30,9 @@ import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import jdk.incubator.http.HttpRequest;
-import static jdk.incubator.http.HttpRequest.BodyPublisher.fromString;
-import static jdk.incubator.http.HttpRequest.BodyPublisher.noBody;
+import java.net.http.HttpRequest;
+import static java.net.http.HttpRequest.BodyPublishers.ofString;
+import static java.net.http.HttpRequest.BodyPublishers.noBody;
 
 /**
  * @test
@@ -155,8 +155,7 @@ public class HttpRequestBuilderTest {
                         (String[]) new String[] {"foo"},
                         IllegalArgumentException.class);
 
-        builder = test1("DELETE", builder, builder::DELETE,
-                        noBody(), null);
+        test0("DELETE", () -> HttpRequest.newBuilder(TEST_URI).DELETE().build(), null);
 
         builder = test1("POST", builder, builder::POST,
                         noBody(), null);
@@ -166,10 +165,6 @@ public class HttpRequestBuilderTest {
 
         builder = test2("method", builder, builder::method, "GET",
                         noBody(), null);
-
-        builder = test1("DELETE", builder, builder::DELETE,
-                        (HttpRequest.BodyPublisher)null,
-                        NullPointerException.class);
 
         builder = test1("POST", builder, builder::POST,
                         (HttpRequest.BodyPublisher)null,
@@ -204,12 +199,12 @@ public class HttpRequestBuilderTest {
                         NullPointerException.class);
 
         builder = test2("method", builder, builder::method, null,
-                        fromString("foo"),
+                        ofString("foo"),
                         NullPointerException.class);
 // see JDK-8170093
 //
 //        builder = test2("method", builder, builder::method, "foo",
-//                       HttpRequest.BodyProcessor.fromString("foo"),
+//                       HttpRequest.BodyProcessor.ofString("foo"),
 //                       IllegalArgumentException.class);
 //
 //        builder.build();
@@ -223,40 +218,40 @@ public class HttpRequestBuilderTest {
                () -> HttpRequest.newBuilder(TEST_URI).GET(),
                "GET");
 
-        method("newBuilder(TEST_URI).POST(fromString(\"\")).GET().build().method() == GET",
-               () -> HttpRequest.newBuilder(TEST_URI).POST(fromString("")).GET(),
+        method("newBuilder(TEST_URI).POST(ofString(\"\")).GET().build().method() == GET",
+               () -> HttpRequest.newBuilder(TEST_URI).POST(ofString("")).GET(),
                "GET");
 
-        method("newBuilder(TEST_URI).PUT(fromString(\"\")).GET().build().method() == GET",
-               () -> HttpRequest.newBuilder(TEST_URI).PUT(fromString("")).GET(),
+        method("newBuilder(TEST_URI).PUT(ofString(\"\")).GET().build().method() == GET",
+               () -> HttpRequest.newBuilder(TEST_URI).PUT(ofString("")).GET(),
                "GET");
 
-        method("newBuilder(TEST_URI).DELETE(fromString(\"\")).GET().build().method() == GET",
-               () -> HttpRequest.newBuilder(TEST_URI).DELETE(fromString("")).GET(),
+        method("newBuilder(TEST_URI).DELETE().GET().build().method() == GET",
+               () -> HttpRequest.newBuilder(TEST_URI).DELETE().GET(),
                "GET");
 
-        method("newBuilder(TEST_URI).POST(fromString(\"\")).build().method() == POST",
-               () -> HttpRequest.newBuilder(TEST_URI).POST(fromString("")),
+        method("newBuilder(TEST_URI).POST(ofString(\"\")).build().method() == POST",
+               () -> HttpRequest.newBuilder(TEST_URI).POST(ofString("")),
                "POST");
 
-        method("newBuilder(TEST_URI).PUT(fromString(\"\")).build().method() == PUT",
-               () -> HttpRequest.newBuilder(TEST_URI).PUT(fromString("")),
+        method("newBuilder(TEST_URI).PUT(ofString(\"\")).build().method() == PUT",
+               () -> HttpRequest.newBuilder(TEST_URI).PUT(ofString("")),
                "PUT");
 
-        method("newBuilder(TEST_URI).DELETE(fromString(\"\")).build().method() == DELETE",
-               () -> HttpRequest.newBuilder(TEST_URI).DELETE(fromString("")),
+        method("newBuilder(TEST_URI).DELETE().build().method() == DELETE",
+               () -> HttpRequest.newBuilder(TEST_URI).DELETE(),
                "DELETE");
 
-        method("newBuilder(TEST_URI).GET().POST(fromString(\"\")).build().method() == POST",
-               () -> HttpRequest.newBuilder(TEST_URI).GET().POST(fromString("")),
+        method("newBuilder(TEST_URI).GET().POST(ofString(\"\")).build().method() == POST",
+               () -> HttpRequest.newBuilder(TEST_URI).GET().POST(ofString("")),
                "POST");
 
-        method("newBuilder(TEST_URI).GET().PUT(fromString(\"\")).build().method() == PUT",
-               () -> HttpRequest.newBuilder(TEST_URI).GET().PUT(fromString("")),
+        method("newBuilder(TEST_URI).GET().PUT(ofString(\"\")).build().method() == PUT",
+               () -> HttpRequest.newBuilder(TEST_URI).GET().PUT(ofString("")),
                "PUT");
 
-        method("newBuilder(TEST_URI).GET().DELETE(fromString(\"\")).build().method() == DELETE",
-               () -> HttpRequest.newBuilder(TEST_URI).GET().DELETE(fromString("")),
+        method("newBuilder(TEST_URI).GET().DELETE().build().method() == DELETE",
+               () -> HttpRequest.newBuilder(TEST_URI).GET().DELETE(),
                "DELETE");
 
 
